# cuhk_project

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/cuhk_project/: __init__.py  cli.py
src/cuhk_project/CNN/: __init__.py  pipeline.py
src/cuhk_project/CNN/processors/: base.py  conv.py
src/cuhk_project/CNN/utils/: debug_utils.py  image_io.py  visualization.py  visulization.py
src/cuhk_project/core/: config.py
src/cuhk_project/utils/: logger.py
tests/: __init__.py  test_conv_processor.py  test_cuhk_project.py
tests/test_output/numerical_reports/: input_matrix_report.txt  kernel_weights_report.txt  output_matrix_report.txt
